--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ mainClassName = "sample.Main"
 
 dependencies {
     compile 'com.sparkjava:spark-core:2.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.4'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
